@@ -1,5 +1,8 @@
 2002-01-24  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
+	* install.ht (Links): RPMs are now built/installed directly from
+	the source tarball.
+
 	* download.ht (Links): Update download locations.
 
 2002-01-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
